[tool.poetry]
name = "simple-mq"
version = "0.1.0"
description = "Simple project to write and get message in IBM MQ using python"
authors = ["hebertviana <hebert.viana@live.com"]

[tool.poetry.dependencies]
python = "^3.8"
pymqi = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
